--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,51 @@
 //
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .container {
+      width: 75%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+
+  header {
+      height: 150px;
+      display: flex;
+
+     .logo {
+         width: 80px;
+         img {
+            max-width: 100%;
+        }
+    }
+
+    nav {
+        ul {
+            li {
+                display: inline-block;
+                margin: 0 10px;
+        
+                a {
+                  text-decoration: none;
+                  color: rgba(142,140,142,255);
+                  font-size: 20px;
+                  font-weight: bold;
+                  padding: 48px 5px;
+                }
+            }
+        }
+    }
+  }
+  
+  .jumbo {
+      height: 400px;
+      background-image: url("https://image.tmdb.org/t/p/w1920_and_h800_multi_faces/3VdbzXAS3LY3shfsKw266W9jQiG.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+  }
