--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,82 +14,9 @@
   }
 
 //   header 
-  header {
-      height: 150px;
-      display: flex;
-
-     .logo {
-         width: 80px;
-         img {
-            max-width: 100%;
-        }
-    }
-
-    nav {
-        ul {
-            li {
-                display: inline-block;
-                margin: 0 10px;
-        
-                a {
-                  text-decoration: none;
-                  color: rgba(142,140,142,255);
-                  font-size: 20px;
-                  font-weight: bold;
-                  padding: 48px 5px;
-                }
-            }
-        }
-    }
-  }
-  
-  .jumbo {
-      height: 400px;
-      background-image: url("https://image.tmdb.org/t/p/w1920_and_h800_multi_faces/3VdbzXAS3LY3shfsKw266W9jQiG.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-  }
-
+@import "partials/header";
 
 //   home-page 
-  #home-page-content {
-      position: relative;
-      padding: 20px 0;
-      background-color: rgba(28,28,28,255);
-
-      .title-wrapper {
-          text-transform: uppercase;
-          color: white;
-          background-color: #0282f9;
-          padding: 10px 25px;
-          position: absolute;
-          top: -25px;
-      }
-
-      .cards-container {
-          display: flex;
-          flex-wrap: wrap;
-
-          .card {
-              width: calc(100% / 6 - 10px);
-              margin: 20px 5px;
-
-              .card-img {
-                  max-height: 200px;
-                  overflow: hidden;
-
-                  img {
-                      width: 100%;
-                  }
-              }
-
-              .card-title {
-                  color: white;
-              }
-          }
-      }
-  }
-
+  @import "partials/home-page";
 
 //   footer 
