--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -29,8 +29,8 @@ header {
 
 .jumbo {
     height: 400px;
-    background-image: url("https://image.tmdb.org/t/p/w1920_and_h800_multi_faces/3VdbzXAS3LY3shfsKw266W9jQiG.jpg");
+    background-image: url("/img/jumbotron.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
 }
