--- a/resources/sass/partials/_home-page.scss
+++ b/resources/sass/partials/_home-page.scss
@@ -62,3 +62,36 @@
         }
     }
 }
+
+
+#home-page-shop {
+    background-color: #0282f9;
+    padding: 50px 0;
+    
+    ul{
+        display: flex;
+        justify-content: space-evenly;
+
+        li{
+            display: inline-block;
+            margin-right: 25px;
+
+            a {
+                font-size: 14px;
+                color: white;
+                text-decoration: none;
+                text-transform: uppercase;
+                display: flex;
+                align-items: center;
+
+                img {
+                    
+                    height: 50px;
+                    margin-right: 10px;
+                }
+            }
+
+
+        }
+    }
+}
