--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 @import "partials/header";
 
 //   home-page 
-  @import "partials/home-page";
+@import "partials/home-page";
 
 //   footer 
+@import "partials/footer";
