Fix images path in component footer

--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 #footer-nav {
-    background-image: url("/img/footer-bg.jpg");
+    background-image: url("/storage/assets/footer-bg.jpg");
 
     #nav-container {
         float: left;
