--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -29,7 +29,7 @@ header {
 
 .jumbo {
     height: 400px;
-    background-image: url("/img/jumbotron.jpg");
+    background-image: url("/storage/assets/jumbotron.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
