Import single-page partial in SASS

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,5 +19,8 @@
 //   home-page 
 @import "partials/home-page";
 
+// single-page 
+@import "partials/single-page";
+
 //   footer 
 @import "partials/footer";
