--- a/resources/sass/partials/_home-page.scss
+++ b/resources/sass/partials/_home-page.scss
@@ -43,6 +43,8 @@
     
                 .card-title {
                     color: white;
+                    text-transform: uppercase;
+                    padding-top: 10px;
                 }
             }
 
